--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-HELLO!
+The code in this repo is a playground for 3D techniques in Direct3D 11. The basic engine is based on tutorials found at:
+
+http://www.rastertek.com
+
+
